fix cache for the Qt packages from S3

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,6 +14,7 @@ branches:
 # build cache to preserve files/folders between builds
 cache:
   - dependencies.7z
+  - qt-5.12.3-msvc_64.7z # if not using AppVeyor's built-in Qt in before_build.bat
   - qt-5.12.3-msvc.7z # if not using AppVeyor's built-in Qt in before_build.bat
   - C:\Program Files (x86)\Jack
   - C:\MuseScore\build.release\thirdparty
