prepare 3.3 final release
We grab appcast.xml from the appveyor storage and put to S3 manually. There is no need to send appcast.xml to S3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,8 +96,8 @@ include (CreatePrecompiledHeader)
 set(CMAKE_AUTOMOC     TRUE)
 set(MSCORE_UNSTABLE   FALSE)          # Mark as unstable
 #set(MSCORE_RELEASE_CHANNEL "devel")
-set(MSCORE_RELEASE_CHANNEL "testing")
-#set(MSCORE_RELEASE_CHANNEL "stable")
+#set(MSCORE_RELEASE_CHANNEL "testing")
+set(MSCORE_RELEASE_CHANNEL "stable")
 set(USE_SSE           TRUE)
 
 # Disable components not supported on Windows
@@ -283,9 +283,9 @@ SET(MUSESCORE_NAME "MuseScore")
 SET(MUSESCORE_VERSION_MAJOR  "3")
 SET(MUSESCORE_VERSION_MINOR  "3")
 SET(MUSESCORE_VERSION_PATCH  "0")
-SET(MUSESCORE_VERSION_LABEL  "Release Candidate 3")
+SET(MUSESCORE_VERSION_LABEL  "")
 SET(MUSESCORE_VERSION       "${MUSESCORE_VERSION_MAJOR}.${MUSESCORE_VERSION_MINOR}")
-SET(MUSESCORE_NAME_VERSION "${MUSESCORE_NAME} ${MUSESCORE_VERSION_MAJOR}.${MUSESCORE_VERSION_MINOR} ${MUSESCORE_VERSION_LABEL}")
+SET(MUSESCORE_NAME_VERSION "${MUSESCORE_NAME} ${MUSESCORE_VERSION_MAJOR}")
 #
 # Version schema x.x.x is hardcoded in source
 #
