--- a/Makefile.osx
+++ b/Makefile.osx
@@ -18,8 +18,8 @@
 #=============================================================================
 
 REVISION  = `cat mscore/revision.h`
-VERSION   = "3.3b-${REVISION}"
-#VERSION = 3.3.3
+#VERSION   = "3.3b-${REVISION}"
+VERSION = 3.3.3
 BUILD_NUMBER = ""
 PREFIX=../applebuild
 
